prevent double scrollbars on headline

--- a/source/stylesheets/_excerpt.scss
+++ b/source/stylesheets/_excerpt.scss
@@ -35,7 +35,7 @@
   color: $light-gray;
   display: block;
   font-size: .8em;
-  margin: 0;
+  margin: 0 0 2rem;
   text-transform: uppercase;
 }
 
