--- a/source/stylesheets/_hero.scss
+++ b/source/stylesheets/_hero.scss
@@ -22,7 +22,13 @@
 .hero-headline {
   font-size: 2.8rem;
   font-weight: 400;
-  margin: .1em 0;
+  margin: .15em;
   text-align: center;
   word-spacing: -.1em;
+
+  @include if_narrower_than(880px) {
+    br {
+      display: none;
+    }
+  }
 }
